# invisible_playwright

./: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: 01-launch-failure.yml  02-site-or-action-bug.yml  03-stealth-detection.yml  config.yml
.github/workflows/: e2e.yml  publish.yml  release.yml  republish.yml  tests.yml  verify-assets.yml  verify-cloak.yml  webrtc-e2e.yml
scripts/: ci_drive_gate.py  run_e2e.py
src/invisible_playwright/: __init__.py  _geo.py  _recaptcha_seed.py  _webgl_personas.py  async_api.py  cli.py  config.py  constants.py  download.py  launcher.py  prefs.py
src/invisible_playwright/_fpforge/: _sampler.py  profile.py
src/invisible_playwright/_fpforge/data/: browsing_pool.json  cpt_browsing_given_class.json  font_pool.json  webgl_gpu_pool.json
tests/: conftest.py  test_async_api.py  test_build.py  test_canvas_render_stealth.py  test_cli.py  test_cloak.py  test_constants.py  test_cross_origin_iframe.py  test_detectors_e2e.py  test_download.py  test_e2e.py  test_fingerprint_consistency.py  test_fingerprint_surface.py  test_fpforge.py  test_geo.py  test_headless.py  test_integration.py  test_launcher_config.py  test_launcher_helpers.py  test_mouse.py  test_network.py  test_prefs.py  test_profile.py  test_proxy.py  test_proxy_socks_auth_e2e.py  test_recaptcha_seed.py  test_release_e2e.py  test_sampler.py  test_service_worker.py  test_webrtc_realness.py
tests/unit/: test_config_public.py
